<resources>
    <string name="app_name">AppTaxi</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="tim_kiem_cung_cap_xe_tai">Tìm kiếm\nCung Cấp Xe Tải</string>
    <string name="ten_dang_nhap_hint">Tên Đăng Nhập</string>
    <string name="mat_khau_hint">Mật khẩu</string>
    <string name="dang_nhap">Đăng Nhập</string>
    <string name="hoac">hoặc</string>
    <string name="khong_co_tai_khoan">Không có tài khoản?</string>
    <string name="dang_ky">Đăng Ký</string>
    <string name="add_image">Ảnh</string>
    <string name="first_name">Họ</string>
    <string name="last_name">Tên</string>
    <string name="email">Email</string>
    <string name="password">Mật khẩu</string>
    <string name="phone_number">Số điện thoại</string>
    <string name="term_policy">By tapping Register,\nI agree to the Terms of Service and Privacy Policy</string>
    <string name="term">Terms of Service</string>
    <string name="policy">Privacy Policy</string>
    <string name="cancel">Hủy</string>
    <string name="date_hint">Ngày</string>
    <string name="month_hint">Tháng</string>
    <string name="year_hint">Năm</string>
    <string name="service_hint">Đăng ký dịch vụ</string>
    <string name="facebook_app_id">1622712958000610</string>
    <string name="add_image_title">Thêm ảnh</string>
    <string name="choose_file">Chọn ảnh</string>
    <string name="title_activity_in_app">InApp</string>
    <string name="get_my_location">Get My Location</string>
    <string name="anh_chan_dung">Ảnh\nchân dung</string>
    <string name="khai_bao_ngay_sinh">Hãy khai báo ngày sinh</string>
    <string name="ngay_thang_nam">Ngày/Tháng/Năm</string>
    <string name="number_one">1</string>
    <string name="number_two">2</string>
    <string name="number_three">3</string>
    <string name="tiep_theo">Tiếp theo</string>
    <string name="date_picker_title">Chọn ngày</string>

    <string-array name="service_register_array">
        <item>Tài xế</item>
    </string-array>

    <string-array name="add_image_items_array">
        <item>Chụp ảnh</item>
        <item>Chọn từ thư viện</item>
        <item>Hủy</item>
    </string-array>
</resources>
