<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#B4EC33"
              android:orientation="vertical"
              tools:ignore="MissingPrefix">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="#000000">

        <TextView
            android:id="@+id/tvCancel_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

        <TextView
            fontPath="fonts/VL_Ample-Bold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dang_ky"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="6dp">

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#000000"/>

        <Button
            android:id="@+id/register_button_number_one"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/button_focus_shape"
            android:clickable="false"
            android:text="@string/number_one"
            android:textSize="32sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#000000"/>

        <Button
            android:id="@+id/register_button_number_two"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/button_focus_shape"
            android:clickable="false"
            android:text="@string/number_two"
            android:textSize="32sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="1dp"
            android:layout_weight="1"
            android:background="#000000"/>

        <Button
            android:id="@+id/register_button_number_three"
            android:layout_width="52dp"
            android:layout_height="52dp"
            android:background="@drawable/button_focus_shape"
            android:clickable="false"
            android:text="@string/number_three"
            android:textSize="32sp"/>

        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#000000"/>

    </LinearLayout>

    <FrameLayout
        android:id="@+id/fragment_container"
        xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="18dp"
        android:paddingTop="18dp">

        <ImageButton
            android:id="@+id/register_button_prev_fragment"
            android:layout_width="54dp"
            android:layout_height="54dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/button_circle_background"/>

        <Button
            android:id="@+id/register_button_next_fragment"
            fontPath="fonts/VL_Ample-Bold.otf"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/button_rectangle_backgroud"
            android:text="@string/tiep_theo"
            android:textColor="#000000"
            android:textAllCaps="false"
            android:textSize="30sp"/>
    </LinearLayout>

</LinearLayout>