<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="#B4EC33"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="38dp"
        android:background="#000000"
        tools:ignore="MissingPrefix">

        <TextView
            android:id="@+id/tvCancel_register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="16dp"
            android:layout_marginStart="16dp"
            android:text="@string/cancel"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/dang_ky"
            fontPath="fonts/VL_Ample-Bold.otf"
            android:textColor="#ffffff"
            android:textSize="24sp"/>

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="6dp"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="6"
            android:fillViewport="true">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp">

                    <ImageButton
                        android:id="@+id/btnAddImage_register"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_centerInParent="true"
                        android:background="@drawable/button_circle_background"
                        android:src="@drawable/ic_add_image"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:gravity="center"
                        android:paddingTop="54dp"
                        android:text="@string/add_image"
                        android:textSize="18sp"/>

                </RelativeLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/etFirstName_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="4"
                        android:background="@drawable/abc_textfield_default_mtrl_alpha"
                        android:hint="@string/first_name"/>

                    <EditText
                        android:id="@+id/etLastName_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:layout_marginStart="16dp"
                        android:layout_weight="3"
                        android:background="@drawable/abc_textfield_default_mtrl_alpha"
                        android:hint="@string/last_name"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/etEmail_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/abc_textfield_default_mtrl_alpha"
                    android:hint="@string/email"
                    android:inputType="textEmailAddress"/>

                <Spinner
                    android:id="@+id/spinnerServiceRegister_register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/drop_down_arrow_spinner"/>

                <EditText
                    android:id="@+id/etPassword_Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/abc_textfield_default_mtrl_alpha"
                    android:hint="@string/password"
                    android:inputType="textPassword"/>

                <EditText
                    android:id="@+id/etPhone_Register"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/abc_textfield_default_mtrl_alpha"
                    android:hint="@string/phone_number"
                    android:inputType="phone"/>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/spinDate_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/drop_down_arrow_spinner"/>

                    <Spinner
                        android:id="@+id/spinMonth_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="8dp"
                        android:layout_marginRight="8dp"
                        android:layout_weight="1"
                        android:background="@drawable/drop_down_arrow_spinner"/>

                    <Spinner
                        android:id="@+id/spinYear_register"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/drop_down_arrow_spinner"/>

                </LinearLayout>

                <!--<DatePicker
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:calendarViewShown="false"

                    />-->

            </LinearLayout>

        </ScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            tools:ignore="MissingPrefix">

            <Button
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/button_rectangle_backgroud"
                android:text="@string/dang_ky"
                android:textSize="24sp"
                fontPath="fonts/VL_Ample-Bold.otf"
                android:textStyle="bold"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.5"
            android:gravity="bottom"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvTermPolicy_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:gravity="center"
                android:text="@string/term_policy"/>

        </LinearLayout>


    </LinearLayout>

</LinearLayout>