<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <LinearLayout
        android:id="@+id/register_layout_main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:clickable="true"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center"
        android:orientation="vertical"
        android:paddingLeft="32dp"
        android:paddingRight="32dp">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <EditText
                    android:id="@+id/register_et_first_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:background="@drawable/abc_textfield_default_mtrl_alpha"
                    android:hint="@string/first_name"
                    android:inputType="textLongMessage"
                    android:maxLines="1"/>

                <EditText
                    android:id="@+id/register_et_last_name"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_weight="3"
                    android:background="@drawable/abc_textfield_default_mtrl_alpha"
                    android:hint="@string/last_name"
                    android:inputType="textLongMessage"
                    android:maxLines="1"/>

            </LinearLayout>

            <EditText
                android:id="@+id/register_et_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/abc_textfield_default_mtrl_alpha"
                android:hint="@string/email"
                android:inputType="textEmailAddress"/>

            <Spinner
                android:id="@+id/register_spinner_service"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginBottom="10dp"
                android:background="@drawable/drop_down_arrow_spinner"/>

            <EditText
                android:id="@+id/register_et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/abc_textfield_default_mtrl_alpha"
                android:hint="@string/password"
                android:inputType="textPassword"/>

            <EditText
                android:id="@+id/etPhone_Register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:background="@drawable/abc_textfield_default_mtrl_alpha"
                android:hint="@string/phone_number"
                android:inputType="phone"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">

                <Spinner
                    android:id="@+id/register_spinner_day"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/drop_down_arrow_spinner"/>

                <Spinner
                    android:id="@+id/register_spinner_month"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="8dp"
                    android:layout_marginRight="8dp"
                    android:layout_weight="1"
                    android:background="@drawable/drop_down_arrow_spinner"/>

                <Spinner
                    android:id="@+id/register_spinner_year"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/drop_down_arrow_spinner"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>
