<?xml version="1.0" encoding="utf-8"?>

<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B4EC33"
    android:fillViewport="true">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="40dp"
            android:layout_marginRight="40dp"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:layout_width="144dp"
                    android:layout_height="83.5dp"
                    android:src="@drawable/img_truck"/>

                <TextView
                    android:id="@+id/tvTitleLogin_login"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="20dp"
                    android:layout_marginTop="30dp"
                    android:gravity="center"
                    android:text="@string/tim_kiem_cung_cap_xe_tai"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    />

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:stretchColumns="1">

                    <TableRow>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_account"/>

                        <EditText
                            android:id="@+id/etAccount_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/ten_dang_nhap_hint"
                            android:textSize="15sp"/>
                    </TableRow>

                    <TableRow>

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="10dp"
                            android:layout_marginRight="10dp"
                            android:src="@drawable/ic_password"/>

                        <EditText
                            android:id="@+id/etPassword_login"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/mat_khau_hint"
                            android:inputType="textPassword"
                            android:textSize="15sp"/>
                    </TableRow>
                </TableLayout>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1"
                android:gravity="center"
                android:orientation="vertical">

                <Button
                    android:id="@+id/btnSignIn_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/button_rectangle_backgroud"
                    android:text="@string/dang_nhap"
                    android:textColor="#000000"
                    android:textSize="30sp"
                    />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/line"/>

                    <TextView
                        android:id="@+id/tvOr_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="5dp"
                        android:layout_marginRight="5dp"
                        android:textSize="15sp"
                        android:text="@string/hoac"/>

                    <ImageView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:background="@drawable/line"/>

                </LinearLayout>

                <ImageButton
                    android:id="@+id/btnFacebook_login"
                    android:layout_width="100dp"
                    android:layout_height="100dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="70dp"
                    android:background="@drawable/button_circle_background"
                    android:src="@drawable/img_facebook"/>

            </LinearLayout>


        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:scaleType="centerCrop"
            android:src="@drawable/img_city"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_alignParentBottom="true"
            android:background="#000000"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tvNoAccount_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/khong_co_tai_khoan"
                android:textColor="#ffffff"
                android:textSize="20sp"/>

            <TextView
                android:id="@+id/tvSignUp_login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:layout_marginStart="6dp"
                android:text="@string/dang_ky"
                android:textAllCaps="true"
                android:textColor="#B4EC33"
                android:textSize="20sp"
                android:textStyle="bold"/>
        </LinearLayout>

    </RelativeLayout>

</ScrollView>